<resources>
    <string name="app_name">EasyClaim</string>
    <string name="description_easyclaim_logo">Here is the logo of our app EasyClaim</string>
    <string name="turn_on_device">1. Turn on the device</string>
    <string name="activate_bluetooth">2. Activate the Bluetooth on your phone</string>
    <string name="select_device">3. Select the device on your phone EasyClaim_IOT</string>
    <string name="switch_label">Device Switch</string>
    <string name="logo_description">EasyClaim Logo</string>
    <string name="day_prompt">Jour</string>
    <string name="month_prompt">Mois</string>
    <string name="year_prompt">Année</string>
    <string name="hour_prompt">Heure</string>
    <string name="minute_prompt">Minute</string>
    <string name="ampm_prompt">AM/PM</string>
    <string name="you_just_had_an_accident_click_below_to_get_assistance_doing_the_report">You just had an accident ? Click below to get assistance doing the report.</string>
    <string name="easyclaim">EASYCLAIM</string>
    <string name="connection_to_the_device">Connection to the device</string>
    <string name="first_time_with_easyclaim">First time with EasyClaim ?</string>
    <string name="learn_how_to_use_easyclaim">Learn how to use EasyClaim !</string>
    <string name="configure_the_device">Configure the device</string>
    <string name="having_trouble_confirguring_the_device">Having trouble confirguring the device ?</string>

</resources>