<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_easyclaim_logo"
        android:src="@drawable/easyclaimlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_device"
        android:layout_marginTop="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_bluetooth"
        android:layout_marginTop="20dp"
        app:drawableStartCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_device"
        android:layout_marginTop="20dp"
        app:drawableEndCompat="@drawable/ic_launcher_foreground" />

    <!-- Placeholder for the list of devices, to be implemented in code -->
    <ListView
        android:id="@+id/deviceListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="393dp"
        android:layout_height="279dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="TODO" />
</LinearLayout>