<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="16dp">

    <!-- Date Section -->
    <FrameLayout
        android:id="@+id/dateSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- ImageView for the injury vector image -->
        <ImageView
            android:id="@+id/dateImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/date" /> <!-- Replace with your actual vector asset -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp">

            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                style="@style/Theme.EasyClaim.Spinner"
                android:prompt="@string/day_prompt" />

            <Spinner
                android:id="@+id/monthSpinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:prompt="@string/month_prompt" />

            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:prompt="@string/year_prompt" />
        </LinearLayout>
    </FrameLayout>

    <!-- Time Section -->
    <FrameLayout
        android:id="@+id/timeSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateSection">

        <!-- ImageView for the injury vector image -->
        <ImageView
            android:id="@+id/timeImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/time" /> <!-- Replace with your actual vector asset -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp">

            <Spinner
                android:id="@+id/hourSpinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:prompt="@string/hour_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/minuteSpinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:prompt="@string/minute_prompt" />

        </LinearLayout>
    </FrameLayout>

    <!-- Localization Section -->
    <FrameLayout
        android:id="@+id/localizationSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeSection">

        <!-- ImageView for the injury vector image -->
        <ImageView
            android:id="@+id/localisationImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/localisation" /> <!-- Replace with your actual vector asset -->

        <EditText
            android:id="@+id/exactLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:textColorHint="@color/black"
            android:hint="Exact location of the accident" />

    </FrameLayout>

    <!-- Injury Section -->
    <FrameLayout
        android:id="@+id/injurySection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/localizationSection">

        <!-- ImageView for the injury vector image -->
        <ImageView
            android:id="@+id/injuryImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/blesses" /> <!-- Replace with your actual vector asset -->

        <!-- RadioGroup for 'Yes' and 'No' options -->
        <RadioGroup
            android:id="@+id/injuryRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp"> <!-- Adjust padding as needed -->

            <RadioButton
                android:id="@+id/injuryYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:buttonTint="@color/black" /> <!-- Change this to your desired color -->

            <RadioButton
                android:id="@+id/injuryNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:layout_marginStart="16dp"
                android:buttonTint="@color/black" /> <!-- Change this to your desired color -->
        </RadioGroup>
    </FrameLayout>

    <!-- Damage Section -->
    <FrameLayout
        android:id="@+id/dammageSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/injurySection">

        <!-- ImageView for the injury vector image -->
        <ImageView
            android:id="@+id/damageSectionImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/degats" /> <!-- Replace with your actual vector asset -->

        <!-- RadioGroup for 'Yes' and 'No' options -->
        <RadioGroup
            android:id="@+id/damageRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp"> <!-- Adjust padding as needed -->

            <RadioButton
                android:id="@+id/damageYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:buttonTint="@color/black" /> <!-- Change this to your desired color -->

            <RadioButton
                android:id="@+id/damageNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:layout_marginStart="16dp"
                android:buttonTint="@color/black" /> <!-- Change this to your desired color -->
        </RadioGroup>
    </FrameLayout>

    <!-- Bouton de continuation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_configure_background"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
